# LAST-lab

./: .gitignore  Disposizione_01.yml  Disposizione_02.yml  Disposizione_03.yml  Environment.m  README.md  RoomLayoutStl.m  initializeSimscape.asv  initializeSimscape.m  main.m
Simscape/: LAST_Simscape.slx  LAST_Simscape.slx.autosave  initializeSimscape.asv  initializeSimscape.m
Simscape/CAD_ARTICOLATO/: Base.SLDPRT  Link1.SLDPRT  Link2.SLDPRT  Link3.SLDPRT  Link4.SLDPRT  Link5.SLDPRT  Link6.SLDPRT  SMART NS 12-1,85_ARTICOLATO.SLDASM
Simscape/CAD_NS12/EN_arc3dsolidworks_NS-12/SMART NS 12-1,85 ARC_040128(3D-SOLIDWORKS)/: 82280801-040128.sldprt  82280804-040128.sldprt  82280805-040128.sldprt  82280809.SLDPRT  82280811-040128.sldprt  (+11 more)
Simscape/SimscapeBlocks/: CTC_controller.slx  NS12_185_simscape.slx  NS12_185_simscape.slx.autosave
Simscape/URDF/: CMakeLists.txt  package.xml
Simscape/URDF/config/: joint_names_SMART NS 12-1,85_ARTICOLATO.SLDASM.yaml
Simscape/URDF/launch/: display.launch  gazebo.launch
Simscape/URDF/meshes/: BaseLink.STL  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  LinkBase.STL  LinkEE.STL
Simscape/URDF/urdf/: SMART NS 12-1,85_ARTICOLATO.SLDASM.csv  SMART NS 12-1,85_ARTICOLATO.SLDASM.urdf  SMARTNS12_1_85_ARTICOLATO_SLDASM.slx.autosave
documents/: MESH_OperationArea.mat  MESH_comaunNS12.mat  MESH_comaunNS12_1.mat  Room0.fig
functions/: NS12_model.m  PlotEnvElements.m  ReadEnvironmentData.m
functions/YAMLMatlab_0.4.3/: DateTime.m
functions/YAMLMatlab_0.4.3/Tests/: selftest_yamlmatlab.m  test_ReadYaml.m  test_WriteYaml.m
(+2 files in other folders)
